fix transactions data
