# service/app/Http/Resources/TransactionResource.php
@@ -8,22 +8,26 @@ class TransactionResource extends JsonResource
 {
     public function toArray($request): array
     {
-        return [
-            'data' => [
-                'hash' => $this->hash,
-                'nonce' => $this->nonce,
-                'block' => $this->block->height,
-                'timestamp' => $this->block->timestamp,
-                'fee' => $this->fee,
-                'type' => $this->typeString,
-                'status' => $this->status,
+        if ($this->resource) {
+            return [
                 'data' => [
-                    'from' => $this->from,
-                    'to' => $this->from,
-                    'coin' => $this->coin,
-                    'value' => (float)$this->value
+                    'hash' => $this->hash,
+                    'nonce' => $this->nonce,
+                    'block' => $this->block->height,
+                    'timestamp' => $this->block->timestamp,
+                    'fee' => $this->fee,
+                    'type' => $this->typeString,
+                    'status' => $this->status,
+                    'data' => [
+                        'from' => $this->from,
+                        'to' => $this->from,
+                        'coin' => $this->coin,
+                        'value' => (float)$this->value
+                    ]
                 ]
-            ]
-        ];
+            ];
+        }
+
+        return [];
     }
 }
