# service/public/help/swagger.json
@@ -36,10 +36,10 @@
                                     }
                                 },
                                 "links": {
-                                    "$ref": "#/definitions/LinksData"
+                                    "$ref": "#/definitions/BlockLinksData"
                                 },
                                 "meta": {
-                                    "$ref": "#/definitions/MetaData"
+                                    "$ref": "#/definitions/BlockMetaData"
                                 }
                             }
                         }
@@ -154,10 +154,16 @@
                 ],
                 "parameters": [
                     {
-                        "name": "block_height",
+                        "name": "block",
                         "in": "query",
                         "description": "\u0412\u044b\u0441\u043e\u0442\u0430 \u0431\u043b\u043e\u043a\u0430",
                         "type": "integer"
+                    },
+                    {
+                        "name": "account",
+                        "in": "query",
+                        "description": "\u0410\u0434\u0440\u0435\u0441",
+                        "type": "string"
                     },
                     {
                         "name": "page",
@@ -176,6 +182,12 @@
                                     "items": {
                                         "$ref": "#/definitions/Transaction"
                                     }
+                                },
+                                "links": {
+                                    "$ref": "#/definitions/TransactionLinksData"
+                                },
+                                "meta": {
+                                    "$ref": "#/definitions/TransactionMetaData"
                                 }
                             }
                         }
@@ -267,7 +279,7 @@
             },
             "type": "object"
         },
-        "MetaData": {
+        "BlockMetaData": {
             "properties": {
                 "current_page": {
                     "type": "integer",
@@ -300,7 +312,7 @@
             },
             "type": "object"
         },
-        "LinksData": {
+        "BlockLinksData": {
             "properties": {
                 "first": {
                     "type": "string",
@@ -317,6 +329,60 @@
                 "next": {
                     "type": "string",
                     "example": "http://localhost:8000/api/v1/blocks?page=2"
+                }
+            },
+            "type": "object"
+        },
+        "TransactionMetaData": {
+            "properties": {
+                "current_page": {
+                    "type": "integer",
+                    "example": "1"
+                },
+                "from": {
+                    "type": "integer",
+                    "example": "2"
+                },
+                "last_page": {
+                    "type": "integer",
+                    "example": "4"
+                },
+                "path": {
+                    "type": "string",
+                    "example": "http://localhost:8000/api/v1/transactions"
+                },
+                "per_page": {
+                    "type": "integer",
+                    "example": "50"
+                },
+                "to": {
+                    "type": "integer",
+                    "example": "50"
+                },
+                "total": {
+                    "type": "integer",
+                    "example": "130"
+                }
+            },
+            "type": "object"
+        },
+        "TransactionLinksData": {
+            "properties": {
+                "first": {
+                    "type": "string",
+                    "example": "http://localhost:8000/api/v1/transactions?page=1"
+                },
+                "last": {
+                    "type": "string",
+                    "example": "http://localhost:8000/api/v1/transactions?page=2"
+                },
+                "prev": {
+                    "type": "string",
+                    "example": "null"
+                },
+                "next": {
+                    "type": "string",
+                    "example": "http://localhost:8000/api/v1/transactions?page=2"
                 }
             },
             "type": "object"
